# gh-release-automation

./: Cargo.toml  README.md
.github/workflows/: release.yml
