[package]
name = "taplo-dummy"
version = "0.1.0"
authors = ["Wojciech Bartnik <yisonPylkita@gmail.com>"]
edition = "2018"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl-sys/vendored"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
